# Omni6DPoseAPI

./: .gitignore  LICENSE  README.md  data_links.json  download.ipynb  tutorial.ipynb
common/: CHANGELOG.rst  LICENSE.rst  README.rst  bbox.py  data_loader.py  eval_utils.py  log.py  setup.cfg  utils.py
common/cutoop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/iou/: iou.py
