[metadata]
name = cutoop
version = 0.1.0
author = Weiyao Huang
author_email = jy.cat@qq.com
description = Common UTilities for Omni6DPose
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = post_estimation
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.10"
    numpy>=1.21
    ipdb>=0.13.9
    matplotlib>=3.5
    opencv_python>=4.8.0.76
    Pillow>=8.3
    rich>=13.7.0
    scipy>=1.7.3
    tqdm>=4.65.2
    typing_extensions>=4.7.1

package_dir=
    cutoop=.

[build-system]
requires = ["setuptools"]
build-backend = ["setuptools.build_meta"]